--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "axios": "^1.7.2",
     "electron-updater": "^6.1.8",
     "es-hangul": "^1.3.5",
+    "jspdf": "^2.5.1",
     "xml2js": "^0.6.2"
   },
   "devDependencies": {
