DONE - Whole Law in tree export

--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "e2e": "playwright test"
   },
   "dependencies": {
+    "@types/archiver": "^6.0.2",
+    "archiver": "^7.0.1",
     "axios": "^1.7.2",
     "electron-updater": "^6.1.8",
     "es-hangul": "^1.3.5",
