DONE - Dist settings added

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build && electron-builder",
+    "build-win": "electron-builder --windows nsis:ia32",
     "preview": "vite preview",
     "pree2e": "vite build --mode=test",
     "e2e": "playwright test"
